--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.24.0
-langchain==0.0.200
-openai==0.27.8
-python-dotenv==1.0.0
+streamlit==1.40.2
+langchain==0.3.10
+langchain-community==0.3.10
+openai==1.57.0
+python-dotenv==1.0.1
 chromadb==0.3.26
 pandas==2.0.3
 sqlite3==3.42.0
